New functions are added: 1) pagination of books is added 2) sorting of books by year of production is added 3) new endpoint "/books/search" is created. This function allows to find book (title, author and current owner) by using first letters of title. 4) automatic check for expiring of allowed reading period (10 days):      - fields timeOfGettingBook and exceedingPeriod are added to entity book

--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -17,7 +17,8 @@
     <b>Книги:</b>
     <br/>
     <table th:each="book : ${books}">
-        <tr th:text="${book.getName() + ', ' + book.getAuthor() + ', ' + book.getYear()}">book</tr>
+       <div style="color:red" th:if="${book.IsPeriodExceeded()}" th:text="${book.getName() + ',' + book.getAuthor() + ',' + book.getYear()}">book</div>
+        <div th:if="${!book.IsPeriodExceeded()}" th:text="${book.getName() + ',' + book.getAuthor() + ',' + book.getYear()}"></div>
     </table>
     <hr/>
 </div>
